# analiza_danych_mental_distress

./: .gitignore  .harlequin.toml  README.md  justfile  notebook.ipynb  pyproject.toml
queries/: thesis.sql
src/: analyze_genz.py  generate_visualizations.py  ingest.py  main.py
