[project]
name = "mental_health_genz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "duckdb-cli>=1.5.2",
    "ipython>=9.13.0",
]
